--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -17,14 +17,12 @@
 
 
 .cinebuzz {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	
+	padding: 50px 0;
 	background: #fdfdfd;
 		
 	&__title {
 		display: inline-flex;
-
+		
 		font-family: MuseoSans;
 		font-size: 34px;
 		line-height: 49px;
@@ -53,8 +51,8 @@
 		font-size: 28px; 
 	}
 	
-	.btn:first-of-type {
-		margin-right: 20px;
+	.btn {
+		margin: 0 10px;
 	}
 }
 
@@ -76,6 +74,7 @@
 		
 		.venues__item_wrapper {
 			display: block;
+			position: relative;
 			width: auto;
 			height: 394px;
 
@@ -85,10 +84,10 @@
 			.venues__item_info {
 				position: absolute;
 				bottom: 30px;
-				left: 45px;
+				left: 30px;
 				
 				* { color:  #fff; }
-
+				
 				.info__title {
 					font-size: 30px;
 					font-weight: 600;
@@ -102,14 +101,12 @@
 						
 			.venues__item_info {
 				display: block;
-				width: 95%;
+				width: 100%;
 				height: 100%;
 				
 				top: 0;
-				left: 15px;
-				margin: 0 auto; 
-				padding: 20px 0;
-						
+				left: 0;
+				padding: 20px 0;					
 				
 				text-align: center;
 				background-color: rgba(25, 24, 58, 0.9);
@@ -164,8 +161,7 @@
 	&__title { color:  #010101; }
 	
 	&__body { 
-		padding-top: 40px;
-		padding-bottom: 50px;
+		padding: 45px 0;
 		
 		.social__list {
 			padding: 0;
