--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -82,6 +82,8 @@
 			border-radius: 2px;
 			transition: all 0.4s;
 			
+			&:hover { box-shadow: 0px 0px 20px 2px rgba(50,50,50,0.8); }
+			
 			.venues__item_info {
 				position: absolute;
 				bottom: 30px;
