Delete margin for second list of sponsors

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -138,17 +138,14 @@
 	&__title { color:  #fff; }
 	
 	&__body {
-		padding-top: 70px;
-		padding-bottom: 35px;
-		
+		padding: 70px 0;
 		background-color:  #655999;
 	
+		.sponsors_list:first-child { margin-bottom: 60px; }
+		
 		li { margin-right: 25px; }	
 		
 		.list-inline {
-
-			&:first-child { margin-bottom: 60px; }
-
 			&__link img { transition: transform 0.5s; }
 
 			&__link:hover { img {	transform: scale(1.1); } }	
